# FinOpsPP-Framework-Assessment

./: .gitignore  FinOps++ (test).md  FinOps++ Framework.xlsx  FinOps_Capabilities_Action_Steps.md  README.md  framework_test.md  pyproject.toml
Assessment/Controls/: ingestion-schedule.md
Assessment/Framework/: framework.md
Assessment/KPIs/: kpi-example.md
assessments/actions/: 000.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  015.md  016.md  017.md  018.md  019.md  020.md  021.md  022.md  023.md  024.md  025.md  026.md  027.md  028.md  029.md  030.md  031.md  032.md  033.md  034.md  035.md  036.md  037.md  038.md  039.md  040.md  (+94 more)
assessments/capabilities/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  015.md  016.md  018.md  019.md  020.md  021.md  022.md
assessments/domains/: 001.md  002.md  003.md  004.md
assessments/frameworks/: FinOps Foundation (test).md  FinOps Foundation.md  FinOps++ (test).md  FinOps++.md  framework.md
assessments/profiles/: 001.md  002.md  007.md
controls/: EX.CS-01.yaml
finopspp/: __main__.py
guidelines/: EX.CS-01.yaml  assessment_design_guidelines.md  control_design_guidelines.md  development_guidelines.md  style_guidelines.md
specifications/: EX.CS-01.yaml
specifications/actions/: 000.yaml  001.yaml  002.yaml  003.yaml  004.yaml  005.yaml  006.yaml  007.yaml  008.yaml  009.yaml  010.yaml  011.yaml  012.yaml  013.yaml  014.yaml  015.yaml  016.yaml  017.yaml  (+117 more)
tools/: __main__.py  models.py
(+37 files in other folders)
